# tsugu

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md
examples/: fib  fib.tsg  test-apply.txt  test-idfn.txt  test.txt
include/tsugu/core/: ast.h  error.h  frame.h  memory.h  parser.h  resolver.h  scanner.h  scope.h  token.h  tyenv.h  tymap.h  type.h  verifier.h
include/tsugu/engine/: engine.h
lib/core/: CMakeLists.txt  ast.c  error.c  memory.c  parser.c  resolver.c  resolver.h  scanner.c  symtbl.c  symtbl.h  token.c  tyenv.c  tymap.c  type.c  verifier.c
lib/engine/: CMakeLists.txt  compiler.cpp  compiler.h  engine.cpp  function_table.cpp  function_table.h
src/: CMakeLists.txt
src/tsugu/: CMakeLists.txt  tsugu.c
src/tsugu/core/: CMakeLists.txt  ast.c  error.c  frame.c  memory.h  parser.c  platform.h  resolver.c  scanner.c  scope.c  symtbl.c  symtbl.h  tyenv.c  tymap.c  type.c  verifier.c
src/tsugu/engine/: CMakeLists.txt  compiler.cpp  compiler.h  engine.cpp
src/tsugu/tools/: CMakeLists.txt  tsugu.c
test/: CMakeLists.txt  expressions_test.tsg  lit.cfg  poly_function_test.tsg
test/lang/: CMakeLists.txt  expression.tsg  func_arg.tsg  func_poly.tsg  func_recursive.tsg  func_ret.tsg  lit.cfg  lit.cfg.in
test/lang/expression/: basic.tsg  binary.tsg  ifelse_parsing.tsg  ifelse_typing.tsg
test/lang/function/: basic.tsg  parsing.tsg  typing1.tsg  typing2.tsg  typing3.tsg
test/lib/: CMakeLists.txt  core_client.c
